Immigrating to desktop application framework

--- a/KnapsackTests1/KnapsackTests1.csproj
+++ b/KnapsackTests1/KnapsackTests1.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Knapsack\Knapsack.csproj" />
+    <ProjectReference Include="..\KnapsackForm\KnapsackForm.csproj" />
   </ItemGroup>
 
 </Project>
